# Render

./: CMakeLists.txt  README.md
3part/glm/: CMakeLists.txt
3part/glm/glm/gtc/: matrix_transform.inl
SoftRenderer/: CMakeLists.txt  main.cpp  mat22.h  mat23.h  mat24.h  mat32.h  mat33.h  mat34.h  mat42.h  mat43.h  mat44.h  math.h  renderer.cpp  renderer.h  renderer_enums.h  shader_tools.h  texture.cpp  texture.h  vec2.h  vec3.h  vec4.h
cmake/: option.cmake
rendercore/: CMakeLists.txt
rendercore/include/: CApp.h  CGraphicPipeline.h  CTexture.h  common.h
rendercore/src/: CApp.cpp  CGraphicPipeline.cpp  CTexture.cpp  main.cpp
