cmake_minimum_required(VERSION 3.21)
project(SoftRenderSystem)
include(cmake/option.cmake)
if(BUILD_MODE_PLUG)
    set(T_LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/Bin)
else()
    set(T_LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/BinTrd)
endif(BUILD_MODE_PLUG)

add_subdirectory(thirdparty)
add_subdirectory(rendercore)